<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            style="@style/Question"
            android:text="@string/question1" />

        <EditText
            style="@style/EditAnswer"
            android:hint="@string/answer1"
            android:id="@+id/ans1"/>

        <TextView
            android:id="@+id/question2"
            style="@style/Question"
            android:text="@string/question2" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/Answer"
                android:text="@string/_int"/>
            <RadioButton
                style="@style/Answer"
                android:text="@string/list"/>
            <RadioButton
                style="@style/Answer"
                android:text="@string/range"
                android:id="@+id/ans2"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question3"
            style="@style/Question"
            android:text="@string/question3"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                style="@style/Answer"
                android:text="@string/_true"/>
            <RadioButton
                style="@style/Answer"
                android:text="@string/_false"
                android:id="@+id/ans3"/>
        </RadioGroup>
        <TextView
            android:id="@+id/question4"
            style="@style/Question"
            android:text="@string/question4"/>
        <CheckBox
            style="@style/Answer"
            android:text="@string/str1"
            android:id="@+id/str1"/>
        <CheckBox
            style="@style/Answer"
            android:text="@string/str2"
            android:id="@+id/str2"/>
        <CheckBox
            style="@style/Answer"
            android:text="@string/str3"
            android:id="@+id/str3"/>
        <CheckBox
            style="@style/Answer"
            android:text="@string/str4"
            android:id="@+id/str4"/>
        <CheckBox
            style="@style/Answer"
            android:text="@string/str5"
            android:id="@+id/str5"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/submit"
            android:onClick="submit"/>


    </LinearLayout>

</ScrollView>